--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@adonisjs/auth": "^8.2.1",
     "@adonisjs/core": "^5.8.4",
     "@adonisjs/lucid": "^18.1.0",
+    "@adonisjs/lucid-slugify": "^2.2.0",
     "@adonisjs/repl": "^3.1.11",
     "luxon": "^3.0.1",
     "pg": "^8.7.3",
